Changed Transaction struct, changed time format in JSON, deleted TransactionT struct
